--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Progate</title>
   </head>
   <body>
-    <h1 class="title">How to Make a Website with HTML & CSS on your Computer science using Progate website</h1>
+    <h1 class="title">How to Make a Website with HTML & CSS on your Computer using Progate website</h1>
   </body>
 </html>
